--- a/css/index.css
+++ b/css/index.css
@@ -54,79 +54,63 @@ section h2 {
   font-size: 50px;
 }
 
+/*-----------------------------------------*/
 /* navigation */
-.nav-whole {
-  padding-top: 50px;
-  display: flex;
-  align-items: baseline;
-}
-
 .navbar-brand {
   color: #FFE000;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
   font-family: 'Pacifico' !important;
   font-size: 28px;
   font-weight: 400;
-  text-align: center;
 }
-/*  
-  text-align: center;
-  font-style: normal;
-  line-height: normal;
-  display: flex;
-  width: 268px;
-  height: 66px;
-  flex-direction: column;
-  justify-content: center;
-*/
 
-#mainNav li {
-  width: 114px;
-  height: 31px;
+.navbar-collapse {
+  flex-grow: 0 !important;
+}
+
+.nav-item a {
+  text-decoration: none;
   color: #FFF;
-  text-align: center;
   font-family: Catamaran;
   font-size: 18px;
-  font-weight: 700;
-  letter-spacing: 0.63px;
+  padding-left: 15px;
 }
 
+.nav-item a:hover {
+  color: #FFE000;
+}
+
+/*-----------------------------------------*/
+/* hero */
 .mountain-bg {
   background-image: url(../images/bg-img.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 1922px;
-  height: 1080px;
+  width: 100%;
 }
 
-.hero-text {
+.masthead .row {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  align-items: center;
 }
 
 .hero-text h1 {
   display: flex;
-  width: 724px;
-  height: 477px;
   flex-direction: column;
   justify-content: center;
+  width: 500px;
   color: #FFF;
   font-family: Catamaran;
-  font-size: 68px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 102.5%; /* 69.7px */ 
+  font-size: 50px;
+  line-height: 102.5%;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .hero-text h1 strong {
-  color: #FFF;
-  font-family: Catamaran;
-  font-size: 68px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 102.5%;
 }
 
 .hero-text button {
@@ -138,13 +122,14 @@ section h2 {
 }
 
 .device-container img {
-  width: 443px;
-  height: 894px;
+  height: 85vh;
+  margin-top: 50px;
+  margin-bottom: 50px; 
 }
 
+/*-----------------------------------------*/
+/* download section */
 .download {
-  width: 1922px;
-  height: 797px;
   background: #FDC949;
 }
 
@@ -159,20 +144,17 @@ section h2 {
   color: #000;
   text-align: center;
   font-family: Catamaran;
-  font-size: 100px;
-  font-style: normal;
+  font-size: 50px;
   font-weight: 300;
-  line-height: 113%; /* 113px */
+  line-height: 113%;
   letter-spacing: -0.5px;
-  margin-left: 0px;
 }
 
 .download p {
   color: #000;
   text-align: center !important;
   font-family: Catamaran;
-  font-size: 26px;
-  font-style: normal;
+  font-size: 20px;
   font-weight: 500;
   line-height: 113%; /* 29.38px */
   letter-spacing: 0.52px;
@@ -190,23 +172,25 @@ section h2 {
   padding: 0 5px 0 5px;
 }
 
-#features .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/*-----------------------------------------*/
+/* Testimonials */
+.testimonials {
+  background: #F8F9FA;
 }
 
-.testimonial-item {
+#features .container, #signup-box, .testimonial-item {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .testimonial-item img {
-  width: 366px;
-  height: 366px;
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.5);
+  margin-top: 20px;
 }
 
 .testimonial-item h5 {
@@ -214,9 +198,8 @@ section h2 {
   text-align: center;
   font-family: Catamaran;
   font-size: 26px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 113%; /* 29.38px */
+  line-height: 113%;
   letter-spacing: 0.52px;
   padding-top: 20px;
 }
@@ -225,10 +208,131 @@ section h2 {
   color: rgba(0, 0, 0, 0.80);
   text-align: center;
   font-family: Catamaran;
-  font-size: 26px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 113%; /* 29.38px */
+  font-size: 20px;
+  line-height: 113%;
   letter-spacing: 0.52px;
 }
 
+/*-----------------------------------------*/
+/* Sign up */
+.signup-section {
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.1) 0%,
+    rgba(0, 0, 0, 0.5) 75%,
+    #000000 100%
+    ),
+    url('../images/SF.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+#signup .container {
+  padding-bottom: 130px;
+}
+
+.signup-section h2 {
+  color: #FFF;
+  text-align: center;
+  font-family: 'Open Sans';
+  font-size: 48px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.signup-section form{
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 710px;
+}
+
+.signup-section input {
+  width: 500px;
+  height: 80px;
+  flex-shrink: 0;
+  fill: #FFF;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.signup-section button {
+  width: 200px;
+  height: 80px;
+  border-radius: 100px;
+  font-size: 19px;
+}
+
+/*-----------------------------------------*/
+/* contact */
+.card {
+  border-radius: 4px;
+  background: #FFF;
+  margin-left: 28px;
+  margin-right: 28px;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-body h4 {
+  color: rgba(0, 0, 0, 0.80);
+  text-align: center;
+  font-family: Catamaran;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 113%;
+  letter-spacing: 0.44px;
+}
+
+.card-body div {
+  color: rgba(0, 0, 0, 0.80);
+  text-align: center;
+  font-family: Catamaran;
+  font-size: 18px;
+  line-height: 113%; /* 24.86px */
+  letter-spacing: 0.44px;
+  padding-left: 125px;
+  padding-right: 125px;
+}
+
+.social {
+ margin-top: 50px;
+}
+
+.social a {
+  color: rgba(255, 255, 255, 0.50);
+  background-color: #3d3d3d;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  text-align: center;
+  padding: 11px 0;
+}
+
+/*-----------------------------------------*/
+/* footer */
+footer {
+  height: 100px;
+  background-color: #707070;
+}
+
+footer p {
+  padding-top: 40px;
+  color: rgba(255, 255, 255, 0.50);
+  text-align: center;
+  font-family: Open Sans;
+}
+
+/*-----------------------------------------*/
+/* media queries */
+@media only screen and (max-width: 600px) {
+  .signup-section form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
